<?xml version="1.0" encoding="UTF-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#212121"
    android:orientation="vertical"
    android:paddingTop="5dp">

    <TextView
        android:id="@android:id/text1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="30dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="5dp"
        android:text="@string/text1"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <TextView
        android:id="@+id/day"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"
        android:layout_toEndOf="@android:id/text1"
        android:singleLine="true"
        android:text="@string/Saturday"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <Switch

        android:id="@+id/switch1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/time"
        android:layout_alignParentEnd="true"
        android:checked="false"
        android:text="@string/en"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <TextClock
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/day"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"
        android:format12Hour="hh:mm:ss a - dd MMM yyyy"
        android:textColor="#ffffff"
        android:textSize="20sp" />


    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/credit"
        android:layout_below="@+id/time">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:orientation="vertical"
            android:minHeight="350dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"

                android:layout_height="0dp"
                android:orientation="horizontal">


                <TextView
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:layout_weight="2"
                    android:background="@color/colorPrimaryDark"
                    android:gravity="start|center_vertical"
                    android:text="@string/fajr"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />

                <TextView
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:id="@+id/fagrv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:gravity="end|center_vertical"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />


            </LinearLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"

                android:layout_height="0dp"
                android:orientation="horizontal">


                <TextView
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:layout_weight="2"
                    android:background="@color/colorPrimaryDark"
                    android:gravity="start|center_vertical"
                    android:text="@string/sunrise"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />

                <TextView
                    android:id="@+id/shroqv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:gravity="end|center_vertical"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"

                android:layout_height="0dp"
                android:orientation="horizontal">


                <TextView
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:layout_weight="2"
                    android:background="@color/colorPrimaryDark"
                    android:gravity="start|center_vertical"
                    android:text="@string/dhuhr"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />

                <TextView
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:id="@+id/dohrv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:gravity="end|center_vertical"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"

                android:layout_height="0dp"
                android:orientation="horizontal">


                <TextView
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:layout_weight="2"
                    android:background="@color/colorPrimaryDark"
                    android:gravity="start|center_vertical"
                    android:text="@string/asr"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />

                <TextView
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:id="@+id/asrv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:gravity="end|center_vertical"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"

                android:layout_height="0dp"
                android:orientation="horizontal">


                <TextView
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:layout_weight="2"
                    android:background="@color/colorPrimaryDark"
                    android:gravity="start|center_vertical"
                    android:text="@string/maghrib"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />

                <TextView
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:id="@+id/maghrbv"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:gravity="end|center_vertical"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_weight="1"
                android:layout_height="0dp"
                android:orientation="horizontal">


                <TextView
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="start"
                    android:layout_weight="2"
                    android:background="@color/colorPrimaryDark"
                    android:gravity="start|center_vertical"
                    android:text="@string/isha"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />

                <TextView
                    android:paddingStart="5dp"
                    android:paddingEnd="5dp"
                    android:id="@+id/ishav"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_gravity="end"
                    android:layout_weight="1"
                    android:gravity="end|center_vertical"
                    android:textColor="#ffffff"
                    android:textSize="20sp" />


            </LinearLayout>


        </LinearLayout>


    </ScrollView>

    <TextView
        android:id="@+id/credit"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:text="@string/credit"
        android:textColor="#ffffff"
        android:textSize="12sp" />

</RelativeLayout>
